--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "esm": "^3.2.25",
     "lodash": "^4.17.15",
+    "moment-timezone": "^0.5.31",
     "mqtt": "^4.1.0",
     "questrade": "^1.1.5"
   },
